@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class HRM {
    name
    vatNumber
    phoneNumber
    email
}

class Skill {
    name
}

class SkillRepository {
    skills
}

'class User {
'    name
'    email
'    password
'}

'Platform "1" -- "*" HRM : has registered >
'Platform "1" -- "*" Category : defines >
HRM "1" - "*" Skill: creates >
Skill "1" - "1" SkillRepository: saved in >
'Skill "*" -- "1" HRM: created by >
'HRM "0..1" -- "1" User: acts as >
@enduml